namespace PlaylistMates.Application.Model
{
    public enum Action
    {
        ADD_SONG,
        REMOVE_SONG,
        RENAME_PLAYLIST
    }
}