namespace PlaylistMates.Application.Model
{
    public enum PlaylistRole
    {
        OWNER,
        COLLABORATOR,
        LISTENER
    }
}